<resources>
    <string name="app_name">Lancamento de Horas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>

    <string name="menu_projeto">Projetos</string>
    <string name="title_section2">Lançar Hora</string>
    <string name="title_section3">Section 3</string>
    <string name="menu_lancar_hora">Lançar Hora</string>
    <string name="menu_consultar_lancamentos">Consultar Lançamentos</string>
    <string name="title_section5">Consultar Registro</string>
    <string name="title_activity_inserir_novo_registro">InserirNovoRegistro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lancar_hora_tela">LancarHoraTela</string>


    <string name="pick_time">pick_time</string>
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="label_status_contador">Status</string>
    <string name="label_iniciado_contador">Iniciado</string>

    <string name="bt_iniciar_contador">INICIAR</string>
    <string name="bt_parar_contador">PARAR</string>
    <string name="bt_submeter_contador">ENVIAR</string>
    <string name="bt_limpar_contador">Limpar</string>
    <string name="labelIniciadoContador">--:--:--</string>

</resources>
